[Sema][SR-15179] Do not record default argument mismatch fix if there is one remove arg fix already for locator