lib/Sema/CSSimplify.cpp
@@ -4410,6 +4410,11 @@ bool ConstraintSystem::repairFailures(
                                                   loc))
       return true;
 
+    // There is already a remove extraneous arguments fix recorded for this
+    // apply arg to param locator, so let's skip the default argument mismatch.
+    if (hasFixFor(loc, FixKind::RemoveExtraneousArguments))
+      return true;
+
     conversionsOrFixes.push_back(
         AllowArgumentMismatch::create(*this, lhs, rhs, loc));
     break;
@@ -4505,12 +4510,9 @@ bool ConstraintSystem::repairFailures(
       // a single parameter of the function type involved in a conversion
       // to another function type, see `matchFunctionTypes`. If there is already
       // a fix for the this convertion, we can just ignore individual function
-      // argument in-out mismatch failure by considered this fixed increasing
-      // the score.
-      if (hasFixFor(parentLoc)) {
-        increaseScore(SK_Fix);
+      // argument in-out mismatch failure by considered this fixed.
+      if (hasFixFor(parentLoc))
         return true;
-      }
 
       // We want to call matchTypes with the default decomposition options
       // in case there are type variables that we couldn't bind due to the
